/*!
 * SAP UI development toolkit for HTML5 (SAPUI5)
 *  * (c) Copyright 2009-2025 SAP SE. All rights reserved
 */
import ResourceBundle from "sap/base/i18n/ResourceBundle";
import {
	CardTypes,
	_getObjectPageCardManifest,
	getCardPath,
	getObjectPageCardManifestForPreview
} from "sap/cards/ap/common/services/RetrieveCard";
import UIComponent from "sap/ui/core/UIComponent";
import HashChanger from "sap/ui/core/routing/HashChanger";
import * as AdaptiveCardSampleManifest from "../testData/AdaptiveCardSampleManifest";
import * as IntegrationCardManifestWithoutSelectParam from "../testData/IntegrationCardManifestWithoutSelectParam";
import * as IntegrationCardSampleManifest from "../testData/IntegrationCardSampleManifest";

const i18nMap: {
	[key: string]: string;
} = {
	appTitle: "Sales Order",
	appDescription: "A Fiori application.",
	CardGeneratorHeaderTitle: "Sales Order",
	CardGeneratorHeaderSubTitle: "A Fiori application.",
	CardGeneratorGroupPropertyLabel_Groups_0_Items_0: "Net Amount",
	CardGeneratorGroupPropertyLabel_Groups_0_Items_1: "Gross Amount",
	CardGeneratorGroupPropertyLabel_Groups_0_Items_2: "Tax Amount",
	CardGeneratorGroupHeader_Groups_0: "Amount",
	CardGeneratorGroupPropertyLabel_Groups_1_Items_0: "Business Partner ID",
	CardGeneratorGroupPropertyLabel_Groups_1_Items_1: "Created At",
	CardGeneratorGroupPropertyLabel_Groups_1_Items_2: "Sales Order ID",
	CardGeneratorGroupHeader_Groups_1: "Additional Info"
};

describe("getCardPath", () => {
	const appManifest = {
		"sap.app": {
			id: "testComponent",
			type: "application"
		},
		"sap.ui5": {},
		"sap.platform.abap": {
			uri: ""
		},
		"sap.cards.ap": {
			embeds: {
				ObjectPage: {
					default: "testEntity",
					manifests: {
						testEntity: [
							{
								localUri: "cards/op/testEntity/"
							}
						],
						testEntity1: [
							{
								localUri: "cards/op/testEntity1/"
							}
						]
					}
				}
			}
		}
	};

	test("returns the card path for integration card", () => {
		const sType = CardTypes.INTEGRATION;
		const entitySet = "testEntity";
		const cardPath = getCardPath(sType, entitySet, appManifest);

		expect(cardPath).toBe("/cards/op/testEntity/manifest.json");
	});

	test("returns the card path for integration card when localUri is without training slash", () => {
		const appManifest = {
			"sap.app": {
				id: "testComponent"
			},
			"sap.ui5": {},
			"sap.ui": {},
			"sap.cards.ap": {
				embeds: {
					ObjectPage: {
						default: "testEntity",
						manifests: {
							testEntity: [
								{
									localUri: "cards/op/testEntity"
								}
							]
						}
					}
				}
			}
		};
		const sType = CardTypes.INTEGRATION;
		const entitySet = "testEntity";
		const cardPath = getCardPath(sType, entitySet, appManifest);

		expect(cardPath).toBe("/cards/op/testEntity/manifest.json");
	});

	test("returns the card path for adaptive card", () => {
		const sType = CardTypes.ADAPTIVE;
		const entitySet = "testEntity";
		const cardPath = getCardPath(sType, entitySet, appManifest);

		expect(cardPath).toBe("/cards/op/testEntity/adaptive-manifest.json");
	});

	test("returns empty path when sap.cards.ap's embeds object page configuration is empty", () => {
		appManifest["sap.cards.ap"].embeds.ObjectPage.manifests = {} as any;
		const sType = CardTypes.ADAPTIVE;
		const entitySet = "testEntity";
		const cardPath = getCardPath(sType, entitySet, appManifest);

		expect(cardPath).toBe("");
	});

	test("returns empty path when sap.cards.ap configuration is not there in appManifest", () => {
		appManifest["sap.cards.ap"] = {} as any;
		const sType = CardTypes.ADAPTIVE;
		const entitySet = "testEntity";
		const cardPath = getCardPath(sType, entitySet, appManifest);

		expect(cardPath).toBe("");
	});
});

describe("_getObjectPageCardManifest", () => {
	let globalFetchMock: jest.SpyInstance;
	const sapAppId = "testComponent1";
	const appManifest = {
		"sap.app": {
			id: sapAppId,
			type: "application"
		},
		"sap.ui5": {},
		"sap.platform.abap": {
			uri: ""
		},
		"sap.cards.ap": {
			embeds: {
				ObjectPage: {
					default: "testEntity",
					manifests: {
						testEntity: [
							{
								localUri: "cards/op/testEntity/"
							}
						]
					}
				}
			}
		}
	};
	const Component = UIComponent.extend("rootComponent", {
		metadata: {
			manifest: appManifest
		},
		createContent() {
			return null;
		}
	});
	const rootComponent = new Component(sapAppId);

	beforeAll(() => {
		globalFetchMock = jest.spyOn(window, "fetch").mockImplementation((url: string) => {
			if (url === "/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return appManifest;
					}
				});
			}
			if (url === "/cards/op/testEntity/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return IntegrationCardSampleManifest;
					}
				});
			}
			if (url === "/cards/op/testEntity/adaptive-manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return AdaptiveCardSampleManifest;
					}
				});
			}
		});
	});

	afterAll(() => {
		globalFetchMock.mockRestore();
	});

	test("returns the integration card manifest for object page card", async () => {
		const fetchedParams = {
			componentName: "testComponent1",
			entitySet: "testEntity",
			cardType: CardTypes.INTEGRATION
		};

		const cardManifest = await _getObjectPageCardManifest(rootComponent, fetchedParams);
		expect(cardManifest).toMatchSnapshot();
	});

	test("returns the adaptive card manifest for object page card", async () => {
		const fetchedParams = {
			componentName: "testComponent1",
			entitySet: "testEntity",
			cardType: CardTypes.ADAPTIVE
		};

		const cardManifest = await _getObjectPageCardManifest(rootComponent, fetchedParams);
		expect(cardManifest).toMatchSnapshot();
	});

	test("rejects the promise when entity set name is empty", async () => {
		const fetchedParams = {
			componentName: "testComponent1",
			entitySet: "",
			cardType: ""
		};
		const rootComponent1 = {
			getManifest: jest.fn().mockReturnValue({})
		};

		try {
			await _getObjectPageCardManifest(rootComponent1, fetchedParams);
		} catch (error) {
			expect(error).toBeDefined();
			expect(error).toBe("No cards available for this application");
		}
	});
});

describe("getObjectPageCardManifestForPreview - V2", () => {
	let globalFetchMock: jest.SpyInstance;
	let resourceBundleCreateSpy: jest.SpyInstance;
	const sapAppId = "testComponent2";
	const appManifest = {
		"sap.app": {
			id: sapAppId,
			type: "application"
		},
		"sap.ui5": {},
		"sap.platform.abap": {
			uri: ""
		},
		"sap.cards.ap": {
			embeds: {
				ObjectPage: {
					default: "testEntity",
					manifests: {
						testEntity: [
							{
								localUri: "cards/op/testEntity/"
							}
						],
						testEntity1: [
							{
								localUri: "cards/op/testEntity1/"
							}
						]
					}
				}
			}
		}
	};
	const Component = UIComponent.extend("rootComponent", {
		metadata: {
			manifest: appManifest
		},
		createContent() {
			return null;
		}
	});
	const rootComponent = new Component(sapAppId);

	beforeAll(() => {
		resourceBundleCreateSpy = jest.spyOn(ResourceBundle, "create").mockImplementation(() => {
			return {
				getText: (key: string) => {
					return i18nMap[key] || key;
				}
			};
		});
		globalFetchMock = jest.spyOn(window, "fetch").mockImplementation((url: string) => {
			if (url === "/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return appManifest;
					}
				});
			}

			if (url === "/cards/op/testEntity1/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return IntegrationCardManifestWithoutSelectParam;
					}
				});
			}

			if (url === "/cards/op/testEntity/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return IntegrationCardSampleManifest;
					}
				});
			}
			if (url === "/cards/op/testEntity/adaptive-manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return AdaptiveCardSampleManifest;
					}
				});
			}
		});
	});

	afterAll(() => {
		resourceBundleCreateSpy.mockRestore();
		globalFetchMock.mockRestore();
	});
	let windowSpy: jest.SpyInstance;
	let getModelSpy: jest.SpyInstance;

	beforeEach(() => {
		windowSpy = jest.spyOn(window, "window", "get");
		getModelSpy = jest.spyOn(rootComponent, "getModel").mockImplementation(() => {
			return {
				isA: () => false,
				getMetaModel: function () {
					return {
						getODataEntitySet: function () {
							return {
								entityType: "container.testEntityType"
							};
						},
						getODataEntityType: function () {
							return {
								property: [
									{
										name: "node_key",
										type: "Edm.Guid"
									},
									{
										name: "IsActiveEntity",
										type: "Edm.Boolean"
									}
								],
								key: {
									propertyRef: [
										{
											name: "node_key"
										},
										{
											name: "IsActiveEntity"
										}
									]
								}
							};
						}
					};
				},
				getObject: () => {
					return {
						node_key: "12345",
						IsActiveEntity: true
					};
				},
				getResourceBundle: jest.fn().mockImplementation(() => {
					return {
						oUrlInfo: {
							url: "i18n.properties"
						}
					};
				})
			};
		});
	});

	afterEach(() => {
		windowSpy.mockRestore();
		getModelSpy.mockRestore();
	});

	test("returns integration card manifest", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () => "test-intent&/testEntity('12345')"
			}
		}));

		const mIntegrationCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.INTEGRATION,
			isDesignMode: true
		});
		expect(mIntegrationCardManifest).toMatchSnapshot();
	});

	test("returns integration card manifest, with key-value format as context parameters", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () => "test-intent&/testEntity(id='12345')"
			}
		}));

		const mIntegrationCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.INTEGRATION,
			isDesignMode: true
		});
		expect(mIntegrationCardManifest).toMatchSnapshot();
	});

	test("returns adaptive card manifest ready for preview when there exists select query parameters", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () => "test-intent&/testEntity(id='12345')"
			},
			location: {
				href: "http://localhost:8080/test#test-intent&/testEntity(id='12345')",
				origin: "http://localhost:8080",
				pathname: "/test",
				search: "?query=1",
				hash: "#hash"
			} as Location
		}));
		const hashChangerMock = {
			getHash: jest.fn().mockReturnValue("myHash"),
			hrefForAppSpecificHash: jest.fn().mockReturnValue("basePath/")
		} as unknown as HashChanger;
		const mockRouter = {
			hashChangerMock
		};
		jest.spyOn(HashChanger, "getInstance").mockReturnValue(mockRouter.hashChangerMock);

		const mAdaptiveCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.ADAPTIVE,
			isDesignMode: true
		});
		expect(mAdaptiveCardManifest).toMatchSnapshot();
	});

	test("returns adaptive card manifest ready for preview when no select query parameter exists for card", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () => "test-intent&/testEntity1(id='12345')"
			},
			location: {
				href: "http://localhost:8080/test#test-intent&/testEntity(id='12345')",
				origin: "http://localhost:8080",
				pathname: "/test",
				search: "?query=1",
				hash: "#hash"
			} as Location
		}));
		const hashChangerMock = {
			getHash: jest.fn().mockReturnValue("myHash"),
			hrefForAppSpecificHash: jest.fn().mockReturnValue("basePath/")
		} as unknown as HashChanger;
		const mockRouter = {
			hashChangerMock
		};
		jest.spyOn(HashChanger, "getInstance").mockReturnValue(mockRouter.hashChangerMock);

		const mIntegrationCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.ADAPTIVE,
			isDesignMode: true
		});
		expect(mIntegrationCardManifest).toMatchSnapshot();
	});
});

describe("getObjectPageCardManifestForPreview - V4", () => {
	let globalFetchMock: jest.SpyInstance;
	let resourceBundleCreateSpy: jest.SpyInstance;
	const sapAppId = "testComponent3";
	const appManifest = {
		"sap.app": {
			id: sapAppId,
			type: "application"
		},
		"sap.ui5": {},
		"sap.platform.abap": {
			uri: ""
		},
		"sap.cards.ap": {
			embeds: {
				ObjectPage: {
					default: "CashBank",
					manifests: {
						CashBank: [
							{
								localUri: "cards/op/CashBank/",
								hideActions: true
							}
						]
					}
				}
			}
		}
	};
	const Component = UIComponent.extend("rootComponent", {
		metadata: {
			manifest: appManifest
		},
		createContent() {
			return null;
		}
	});
	const rootComponent = new Component(sapAppId);

	beforeAll(() => {
		resourceBundleCreateSpy = jest.spyOn(ResourceBundle, "create").mockImplementation(() => {
			return {
				getText: (key: string) => {
					return i18nMap[key] || key;
				}
			};
		});
		globalFetchMock = jest.spyOn(window, "fetch").mockImplementation((url: string) => {
			if (url === "/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return appManifest;
					}
				});
			}

			if (url === "/cards/op/CashBank/manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return IntegrationCardSampleManifest;
					}
				});
			}
			if (url === "/cards/op/CashBank/adaptive-manifest.json") {
				return Promise.resolve({
					ok: true,
					json: () => {
						return AdaptiveCardSampleManifest;
					}
				});
			}
		});
	});

	afterAll(() => {
		resourceBundleCreateSpy.mockRestore();
		globalFetchMock.mockRestore();
	});
	let windowSpy: jest.SpyInstance;
	let getModelSpy: jest.SpyInstance;

	beforeEach(() => {
		windowSpy = jest.spyOn(window, "window", "get");
		getModelSpy = jest.spyOn(rootComponent, "getModel").mockImplementation(() => {
			return {
				isA: () => true,
				getMetaModel: () => {
					return {
						getObject: (sParam: string) => {
							const entityContainer = {
								$kind: "EntityContainer",
								CashBank: {
									$kind: "EntitySet",
									$Type: "com.sap.gateway.srvd.ui_cashbank_manage.v0001.CashBankType"
								},
								"com.sap.gateway.srvd.ui_cashbank_manage.v0001.CashBankType": {
									$kind: "EntityType",
									$Key: ["BankCountry", "BankInternalID", "IsActiveEntity"],
									BankCountry: {
										$kind: "Property",
										$Type: "Edm.String",
										"@com.sap.vocabularies.Common.v1.Label": "Bank Country"
									},
									BankInternalID: {
										$kind: "Property",
										$Type: "Edm.String",
										"@com.sap.vocabularies.Common.v1.Label": "Bank Internal ID"
									},
									IsActiveEntity: {
										$kind: "Property",
										$Type: "Edm.Boolean",
										"@com.sap.vocabularies.Common.v1.Label": "Is Active Entity"
									}
								}
							};
							if (sParam === "/") {
								return entityContainer;
							}
							sParam = sParam.replace("/", "");
							return entityContainer[sParam];
						},
						getODataEntityType: (path: string) => {
							return {
								key: {
									propertyRef: [
										{
											name: "node_key"
										},
										{
											name: "IsActiveEntity"
										},
										{
											name: "BankCountry"
										}
									]
								}
							};
						}
					};
				},
				getObject: () => {
					return {
						node_key: "005056a7-004e-1ed8-b2e0-081387831f0d",
						IsActiveEntity: true,
						BankCountry: "0000000006"
					};
				},
				getResourceBundle: jest.fn().mockImplementation(() => {
					return {
						oUrlInfo: {
							url: "i18n.properties"
						}
					};
				})
			};
		});
	});

	afterEach(() => {
		windowSpy.mockRestore();
		getModelSpy.mockRestore();
	});

	test("returns adaptive card manifest ready for preview when there exists select query parameters- when hideAction is false", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () =>
					"test-intent&/CashBank(node_key='005056a7-004e-1ed8-b2e0-081387831f0d',IsActiveEntity=true,BankCountry=0000000006)"
			},
			location: {
				href: "http://localhost:8080/test#test-intent&/CashBank(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006)",
				origin: "http://localhost:8080",
				pathname: "/test",
				search: "?query=1",
				hash: "#hash"
			}
		}));
		const hashChangerMock = {
			getHash: jest.fn().mockReturnValue("myHash"),
			hrefForAppSpecificHash: jest.fn().mockReturnValue("basePath/")
		} as unknown as HashChanger;
		const mockRouter = {
			hashChangerMock
		};
		jest.spyOn(HashChanger, "getInstance").mockReturnValue(mockRouter.hashChangerMock);

		const mAdaptiveCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.ADAPTIVE,
			includeActions: false,
			hideActions: false,
			isDesignMode: true
		});
		expect(mAdaptiveCardManifest).toMatchSnapshot();
	});

	test("returns integration card manifest", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () =>
					"test-intent&/CashBank(node_key='005056a7-004e-1ed8-b2e0-081387831f0d',IsActiveEntity=true,BankCountry=0000000006)"
			}
		}));
		const hashChangerMock = {
			getHash: jest.fn().mockReturnValue("myHash"),
			hrefForAppSpecificHash: jest.fn().mockReturnValue("basePath/")
		} as unknown as HashChanger;
		const mockRouter = {
			hashChangerMock
		};
		jest.spyOn(HashChanger, "getInstance").mockReturnValue(mockRouter.hashChangerMock);

		const mIntegrationCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.INTEGRATION,
			isDesignMode: true
		});
		expect(mIntegrationCardManifest).toMatchSnapshot();
	});

	test("returns adaptive card manifest ready for preview when there exists select query parameters - when hideAction is true", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () =>
					"test-intent?&/CashBank(node_key='005056a7-004e-1ed8-b2e0-081387831f0d',IsActiveEntity=true,BankCountry=0000000006)/"
			},
			location: {
				href: "http://localhost:8080/test#test-intent&/CashBank(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006)",
				origin: "http://localhost:8080",
				pathname: "/test",
				search: "?query=1",
				hash: "#hash"
			}
		}));
		const hashChangerMock = {
			getHash: jest.fn().mockReturnValue("myHash"),
			hrefForAppSpecificHash: jest.fn().mockReturnValue("basePath/")
		} as unknown as HashChanger;
		const mockRouter = {
			hashChangerMock
		};
		jest.spyOn(HashChanger, "getInstance").mockReturnValue(mockRouter.hashChangerMock);

		const mAdaptiveCardManifest = await getObjectPageCardManifestForPreview(rootComponent, {
			cardType: CardTypes.ADAPTIVE,
			includeActions: false,
			hideActions: true,
			isDesignMode: true
		});
		expect(mAdaptiveCardManifest).toMatchSnapshot();
	});

	test("No card exists for application at run time", async () => {
		windowSpy.mockImplementation(() => ({
			hasher: {
				getHash: () =>
					"test-intent&/CashBank(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006)"
			},
			location: {
				href: "http://localhost:8080/test-intent&/CashBank(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006)"
			}
		}));

		delete rootComponent?.getManifest()?.["sap.cards.ap"];

		try {
			await getObjectPageCardManifestForPreview(rootComponent, {
				cardType: CardTypes.ADAPTIVE,
				includeActions: false,
				hideActions: true,
				isDesignMode: false
			});
		} catch (error) {
			expect(error).toBeDefined();
			expect(error).toBe("No cards available for this application");
		}
	});
});
