// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_getObjectPageCardManifest returns the adaptive card manifest for object page card 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "text": "Card Header",
      "type": "TextBlock",
      "weight": "Bolder",
      "wrap": true,
    },
  ],
  "type": "AdaptiveCard",
  "version": "1.3",
}
`;

exports[`_getObjectPageCardManifest returns the integration card manifest for object page card 1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "id": "objectCard",
    "subTitle": "{{CardGeneratorHeaderSubTitle}} | {overall_status}",
    "title": "{{CardGeneratorHeaderTitle}}",
    "type": "card",
  },
  "sap.card": {
    "configuration": {
      "csrfTokens": {
        "token1": {
          "data": {
            "request": {
              "headers": {
                "X-CSRF-Token": "Fetch",
              },
              "method": "HEAD",
              "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder",
            },
          },
        },
      },
      "destinations": {
        "service": {
          "defaultUrl": "/",
          "name": "(default)",
        },
      },
      "parameters": {
        "BankCountry": {
          "type": "number",
          "value": "0000000006",
        },
        "IsActiveEntity": {
          "type": "boolean",
          "value": true,
        },
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "_contentSelectQuery": {
          "value": "$select=so_id,bp_id,created_at,net_amount,gross_amount,tax_amount,currency_code,overall_status",
        },
        "_entitySet": {
          "type": "string",
          "value": "C_STTA_SalesOrder_WD_20",
        },
        "_headerSelectQuery": {
          "value": "$select=bp_id,currency_code,overall_status",
        },
        "footerActionParameters": {},
        "node_key": {
          "type": "string",
          "value": "12345",
        },
      },
    },
    "content": {
      "data": {
        "path": "/content/d/",
      },
      "groups": [
        {
          "items": [
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_0_Items_0}}",
              "name": "net_amount",
              "value": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
            },
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_0_Items_1}}",
              "name": "gross_amount",
              "value": "{gross_amount} {currency_code}",
            },
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_0_Items_2}}",
              "name": "tax_amount",
              "value": "{tax_amount} {currency_code}",
            },
          ],
          "title": "{{CardGeneratorGroupHeader_Groups_0}}",
        },
        {
          "items": [
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_1_Items_0}}",
              "name": "bp_id",
              "value": "{bp_id}",
            },
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_1_Items_1}}",
              "name": "created_at",
              "value": "{= format.dateTime(\${created_at}, {"relative":false,"UTC":true})}",
            },
            {
              "label": "{{CardGeneratorGroupPropertyLabel_Groups_1_Items_2}}",
              "name": "so_id",
              "value": "{so_id}",
            },
          ],
          "title": "{{CardGeneratorGroupHeader_Groups_1}}",
        },
      ],
    },
    "data": {
      "request": {
        "batch": {
          "content": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})",
          },
          "header": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "retryAfter": 30,
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})?{{parameters._headerSelectQuery}}",
          },
        },
        "headers": {
          "X-CSRF-Token": "{{csrfTokens.token1}}",
        },
        "method": "POST",
        "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder/$batch",
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "footer": {
      "actionsStrip": [],
    },
    "header": {
      "data": {
        "path": "/content/d/",
      },
      "mainIndicator": {
        "number": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
        "state": "{= extension.formatters.formatCriticality(\${Language}, 'color') }",
        "trend": "None",
        "unit": "",
      },
      "sideIndicators": [
        {
          "number": "",
          "title": "",
          "unit": "",
        },
        {
          "number": "",
          "title": "",
          "unit": "",
        },
      ],
      "subTitle": "{{CardGeneratorHeaderSubTitle}}",
      "title": "{{CardGeneratorHeaderTitle}}",
      "type": "Numeric",
      "unitOfMeasurement": "{overall_status}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "sales.order.wd20",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "1.125.1-SNAPSHOT-202406281543",
    },
  },
  "sap.ui": {
    "icons": {
      "icon": "sap-icon://switch-classes",
    },
    "technology": "UI5",
  },
}
`;

exports[`getObjectPageCardManifestForPreview - V2 returns adaptive card manifest ready for preview when no select query parameter exists for card 1`] = `
{
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "color": "Default",
      "maxLines": 1,
      "size": "default",
      "spacing": "none",
      "text": "[ Sales Order ](http://localhost:8080/test#test-intent&/C_STTA_SalesOrder_WD_20(node_key=12345,IsActiveEntity=true))",
      "type": "TextBlock",
      "weight": "bolder",
      "wrap": false,
    },
    {
      "columns": [
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "A Fiori application.",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.' && '{overall_status}') ? true: false}",
              "color": "Default",
              "horizontalAlignment": "Center",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "|",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('{overall_status}') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "\${overall_status}",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
      ],
      "spacing": "none",
      "type": "ColumnSet",
    },
    {
      "color": "\${if(toLower(Language) == 'critical', 'Warning', if(toLower(Language) == 'error', 'Attention', if(toLower(Language) == 'good', 'Good', if(int(Language) == 3, 'Good', if(int(Language) == 1, 'Attention', if(int(Language) == 2, 'Warning', 'Default'))))))}",
      "maxLines": 1,
      "size": "extraLarge",
      "spacing": "none",
      "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
      "type": "TextBlock",
      "weight": "default",
      "wrap": false,
    },
    {
      "items": [
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Amount",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Net Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Gross Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${gross_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Tax Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${tax_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Additional Info",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Business Partner ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(bp_id)) == '', '&minus;', string(bp_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Created At:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(created_at && created_at != '', convertToUTC(created_at, 'UTC', 'ddd d MMM YYYY HH:mm'), '&minus;')}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Sales Order ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(so_id)) == '', '&minus;', string(so_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "metadata": {
    "sap.cards.ap": {
      "cardType": "LEAN_DT",
      "parentAppId": "sales.order.wd20",
      "templateName": "ObjectPage",
      "versions": {
        "ui5": "1.125.1-SNAPSHOT-202406281543",
      },
    },
    "webUrl": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(node_key=12345,IsActiveEntity=true)",
  },
  "msteams": {
    "width": "full",
  },
  "type": "AdaptiveCard",
  "version": "1.6",
}
`;

exports[`getObjectPageCardManifestForPreview - V2 returns adaptive card manifest ready for preview when there exists select query parameters 1`] = `
{
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "color": "Default",
      "maxLines": 1,
      "size": "default",
      "spacing": "none",
      "text": "[ Sales Order ](http://localhost:8080/test#test-intent&/C_STTA_SalesOrder_WD_20(node_key=12345,IsActiveEntity=true))",
      "type": "TextBlock",
      "weight": "bolder",
      "wrap": false,
    },
    {
      "columns": [
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "A Fiori application.",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.' && '{overall_status}') ? true: false}",
              "color": "Default",
              "horizontalAlignment": "Center",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "|",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('{overall_status}') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "\${overall_status}",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
      ],
      "spacing": "none",
      "type": "ColumnSet",
    },
    {
      "color": "\${if(toLower(Language) == 'critical', 'Warning', if(toLower(Language) == 'error', 'Attention', if(toLower(Language) == 'good', 'Good', if(int(Language) == 3, 'Good', if(int(Language) == 1, 'Attention', if(int(Language) == 2, 'Warning', 'Default'))))))}",
      "maxLines": 1,
      "size": "extraLarge",
      "spacing": "none",
      "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
      "type": "TextBlock",
      "weight": "default",
      "wrap": false,
    },
    {
      "items": [
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Amount",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Net Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Gross Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${gross_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Tax Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${tax_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Additional Info",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Business Partner ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(bp_id)) == '', '&minus;', string(bp_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Created At:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(created_at && created_at != '', convertToUTC(created_at, 'UTC', 'ddd d MMM YYYY HH:mm'), '&minus;')}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Sales Order ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(so_id)) == '', '&minus;', string(so_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
    {
      "actions": [
        {
          "$when": "\${salesorderID ? true : false}",
          "data": {
            "actionParams": {
              "keys": [
                "SalesPlanUUID",
                "IsActiveEntity",
              ],
            },
            "contextURL": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(id='12345')",
            "isConfirmationRequired": false,
          },
          "isEnabled": "\${salesorderID}",
          "style": "default",
          "title": "Release",
          "type": "Action.Execute",
          "verb": "C_SalesPlanTPRelease",
        },
      ],
      "type": "ActionSet",
    },
  ],
  "metadata": {
    "sap.cards.ap": {
      "cardType": "LEAN_DT",
      "parentAppId": "sales.order.wd20",
      "templateName": "ObjectPage",
      "versions": {
        "ui5": "1.125.1-SNAPSHOT-202406281543",
      },
    },
    "webUrl": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(id='12345')?$select=bp_id,currency_code,overall_status,so_id,created_at,net_amount,gross_amount,tax_amount",
  },
  "msteams": {
    "width": "full",
  },
  "type": "AdaptiveCard",
  "version": "1.6",
}
`;

exports[`getObjectPageCardManifestForPreview - V2 returns integration card manifest 1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "id": "objectCard",
    "subTitle": "A Fiori application. | {overall_status}",
    "title": "Sales Order",
    "type": "card",
  },
  "sap.card": {
    "configuration": {
      "csrfTokens": {
        "token1": {
          "data": {
            "request": {
              "headers": {
                "X-CSRF-Token": "Fetch",
              },
              "method": "HEAD",
              "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder",
            },
          },
        },
      },
      "destinations": {
        "service": {
          "defaultUrl": "/",
          "name": "(default)",
        },
      },
      "parameters": {
        "BankCountry": {
          "type": "number",
          "value": "0000000006",
        },
        "IsActiveEntity": {
          "type": "boolean",
          "value": "true",
        },
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "_contentSelectQuery": {
          "value": "$select=so_id,bp_id,created_at,net_amount,gross_amount,tax_amount,currency_code,overall_status",
        },
        "_entitySet": {
          "type": "string",
          "value": "C_STTA_SalesOrder_WD_20",
        },
        "_headerSelectQuery": {
          "value": "$select=bp_id,currency_code,overall_status",
        },
        "contextParameters": {
          "type": "string",
          "value": "'12345'",
        },
        "footerActionParameters": {},
        "node_key": {
          "type": "string",
          "value": "12345",
        },
      },
    },
    "content": {
      "data": {
        "path": "/content/d/",
      },
      "groups": [
        {
          "items": [
            {
              "label": "Net Amount",
              "name": "net_amount",
              "value": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
            },
            {
              "label": "Gross Amount",
              "name": "gross_amount",
              "value": "{gross_amount} {currency_code}",
            },
            {
              "label": "Tax Amount",
              "name": "tax_amount",
              "value": "{tax_amount} {currency_code}",
            },
          ],
          "title": "Amount",
        },
        {
          "items": [
            {
              "label": "Business Partner ID",
              "name": "bp_id",
              "value": "{bp_id}",
            },
            {
              "label": "Created At",
              "name": "created_at",
              "value": "{= format.dateTime(\${created_at}, {"relative":false,"UTC":true})}",
            },
            {
              "label": "Sales Order ID",
              "name": "so_id",
              "value": "{so_id}",
            },
          ],
          "title": "Additional Info",
        },
      ],
    },
    "data": {
      "request": {
        "batch": {
          "content": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})",
          },
          "header": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "retryAfter": 30,
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})?{{parameters._headerSelectQuery}}",
          },
        },
        "headers": {
          "Accept-Language": "{{parameters.LOCALE}}",
          "X-CSRF-Token": "{{csrfTokens.token1}}",
        },
        "method": "POST",
        "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder/$batch",
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "footer": {
      "actionsStrip": [],
    },
    "header": {
      "actions": [
        {
          "parameters": {
            "ibnParams": {
              "IsActiveEntity": "true",
              "node_key": "guid'12345'",
              "sap-xapp-state-data": "{"selectionVariant":{"Parameters":[],"SelectOptions":[{"PropertyName":"node_key","Ranges":[{"Sign":"I","Option":"EQ","Low":"guid'12345'","High":null}]},{"PropertyName":"IsActiveEntity","Ranges":[{"Sign":"I","Option":"EQ","Low":"true","High":null}]}]}}",
            },
            "ibnTarget": {
              "action": "intent",
              "semanticObject": "test",
            },
          },
          "type": "Navigation",
        },
      ],
      "data": {
        "path": "/header/d/",
      },
      "mainIndicator": {
        "number": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
        "state": "{= extension.formatters.formatCriticality(\${Language}, 'color') }",
        "trend": "None",
        "unit": "",
      },
      "sideIndicators": [
        {
          "number": "",
          "title": "",
          "unit": "",
        },
        {
          "number": "",
          "title": "",
          "unit": "",
        },
      ],
      "subTitle": "A Fiori application.",
      "title": "Sales Order",
      "type": "Numeric",
      "unitOfMeasurement": "{overall_status}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "sales.order.wd20",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "1.125.1-SNAPSHOT-202406281543",
    },
  },
  "sap.ui": {
    "icons": {
      "icon": "sap-icon://switch-classes",
    },
    "technology": "UI5",
  },
}
`;

exports[`getObjectPageCardManifestForPreview - V2 returns integration card manifest, with key-value format as context parameters 1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "id": "objectCard",
    "subTitle": "A Fiori application. | {overall_status}",
    "title": "Sales Order",
    "type": "card",
  },
  "sap.card": {
    "configuration": {
      "csrfTokens": {
        "token1": {
          "data": {
            "request": {
              "headers": {
                "X-CSRF-Token": "Fetch",
              },
              "method": "HEAD",
              "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder",
            },
          },
        },
      },
      "destinations": {
        "service": {
          "defaultUrl": "/",
          "name": "(default)",
        },
      },
      "parameters": {
        "BankCountry": {
          "type": "number",
          "value": "0000000006",
        },
        "IsActiveEntity": {
          "type": "boolean",
          "value": "true",
        },
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "_contentSelectQuery": {
          "value": "$select=so_id,bp_id,created_at,net_amount,gross_amount,tax_amount,currency_code,overall_status",
        },
        "_entitySet": {
          "type": "string",
          "value": "C_STTA_SalesOrder_WD_20",
        },
        "_headerSelectQuery": {
          "value": "$select=bp_id,currency_code,overall_status",
        },
        "contextParameters": {
          "type": "string",
          "value": "id='12345'",
        },
        "footerActionParameters": {},
        "node_key": {
          "type": "string",
          "value": "12345",
        },
      },
    },
    "content": {
      "data": {
        "path": "/content/d/",
      },
      "groups": [
        {
          "items": [
            {
              "label": "Net Amount",
              "name": "net_amount",
              "value": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
            },
            {
              "label": "Gross Amount",
              "name": "gross_amount",
              "value": "{gross_amount} {currency_code}",
            },
            {
              "label": "Tax Amount",
              "name": "tax_amount",
              "value": "{tax_amount} {currency_code}",
            },
          ],
          "title": "Amount",
        },
        {
          "items": [
            {
              "label": "Business Partner ID",
              "name": "bp_id",
              "value": "{bp_id}",
            },
            {
              "label": "Created At",
              "name": "created_at",
              "value": "{= format.dateTime(\${created_at}, {"relative":false,"UTC":true})}",
            },
            {
              "label": "Sales Order ID",
              "name": "so_id",
              "value": "{so_id}",
            },
          ],
          "title": "Additional Info",
        },
      ],
    },
    "data": {
      "request": {
        "batch": {
          "content": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})",
          },
          "header": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "retryAfter": 30,
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})?{{parameters._headerSelectQuery}}",
          },
        },
        "headers": {
          "Accept-Language": "{{parameters.LOCALE}}",
          "X-CSRF-Token": "{{csrfTokens.token1}}",
        },
        "method": "POST",
        "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder/$batch",
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "footer": {
      "actionsStrip": [],
    },
    "header": {
      "actions": [
        {
          "parameters": {
            "ibnParams": {
              "IsActiveEntity": "true",
              "node_key": "guid'12345'",
              "sap-xapp-state-data": "{"selectionVariant":{"Parameters":[],"SelectOptions":[{"PropertyName":"node_key","Ranges":[{"Sign":"I","Option":"EQ","Low":"guid'12345'","High":null}]},{"PropertyName":"IsActiveEntity","Ranges":[{"Sign":"I","Option":"EQ","Low":"true","High":null}]}]}}",
            },
            "ibnTarget": {
              "action": "intent",
              "semanticObject": "test",
            },
          },
          "type": "Navigation",
        },
      ],
      "data": {
        "path": "/header/d/",
      },
      "mainIndicator": {
        "number": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
        "state": "{= extension.formatters.formatCriticality(\${Language}, 'color') }",
        "trend": "None",
        "unit": "",
      },
      "sideIndicators": [
        {
          "number": "",
          "title": "",
          "unit": "",
        },
        {
          "number": "",
          "title": "",
          "unit": "",
        },
      ],
      "subTitle": "A Fiori application.",
      "title": "Sales Order",
      "type": "Numeric",
      "unitOfMeasurement": "{overall_status}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "sales.order.wd20",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "1.125.1-SNAPSHOT-202406281543",
    },
  },
  "sap.ui": {
    "icons": {
      "icon": "sap-icon://switch-classes",
    },
    "technology": "UI5",
  },
}
`;

exports[`getObjectPageCardManifestForPreview - V4 returns adaptive card manifest ready for preview when there exists select query parameters - when hideAction is true 1`] = `
{
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "color": "Default",
      "maxLines": 1,
      "size": "default",
      "spacing": "none",
      "text": "[ Sales Order ](http://localhost:8080/test#test-intent&/C_STTA_SalesOrder_WD_20(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006))",
      "type": "TextBlock",
      "weight": "bolder",
      "wrap": false,
    },
    {
      "columns": [
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "A Fiori application.",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.' && '{overall_status}') ? true: false}",
              "color": "Default",
              "horizontalAlignment": "Center",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "|",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('{overall_status}') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "\${overall_status}",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
      ],
      "spacing": "none",
      "type": "ColumnSet",
    },
    {
      "color": "\${if(toLower(Language) == 'critical', 'Warning', if(toLower(Language) == 'error', 'Attention', if(toLower(Language) == 'good', 'Good', if(int(Language) == 3, 'Good', if(int(Language) == 1, 'Attention', if(int(Language) == 2, 'Warning', 'Default'))))))}",
      "maxLines": 1,
      "size": "extraLarge",
      "spacing": "none",
      "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
      "type": "TextBlock",
      "weight": "default",
      "wrap": false,
    },
    {
      "items": [
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Amount",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Net Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Gross Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${gross_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Tax Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${tax_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Additional Info",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Business Partner ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(bp_id)) == '', '&minus;', string(bp_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Created At:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(created_at && created_at != '', convertToUTC(created_at, 'UTC', 'ddd d MMM YYYY HH:mm'), '&minus;')}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Sales Order ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(so_id)) == '', '&minus;', string(so_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "metadata": {
    "sap.cards.ap": {
      "cardType": "LEAN_DT",
      "parentAppId": "sales.order.wd20",
      "templateName": "ObjectPage",
      "versions": {
        "ui5": "1.125.1-SNAPSHOT-202406281543",
      },
    },
    "webUrl": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(node_key='005056a7-004e-1ed8-b2e0-081387831f0d',IsActiveEntity=true,BankCountry=0000000006)?$select=bp_id,currency_code,overall_status,so_id,created_at,net_amount,gross_amount,tax_amount",
  },
  "msteams": {
    "width": "full",
  },
  "type": "AdaptiveCard",
  "version": "1.6",
}
`;

exports[`getObjectPageCardManifestForPreview - V4 returns adaptive card manifest ready for preview when there exists select query parameters- when hideAction is false 1`] = `
{
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "color": "Default",
      "maxLines": 1,
      "size": "default",
      "spacing": "none",
      "text": "[ Sales Order ](http://localhost:8080/test#test-intent&/C_STTA_SalesOrder_WD_20(node_key=005056a7-004e-1ed8-b2e0-081387831f0d,IsActiveEntity=true,BankCountry=0000000006))",
      "type": "TextBlock",
      "weight": "bolder",
      "wrap": false,
    },
    {
      "columns": [
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "A Fiori application.",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('A Fiori application.' && '{overall_status}') ? true: false}",
              "color": "Default",
              "horizontalAlignment": "Center",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "|",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
        {
          "items": [
            {
              "$when": "\${ ('{overall_status}') ? true: false}",
              "color": "Default",
              "isSubtle": true,
              "maxLines": 1,
              "size": "default",
              "spacing": "none",
              "text": "\${overall_status}",
              "type": "TextBlock",
              "weight": "default",
              "wrap": false,
            },
          ],
          "type": "Column",
          "width": "auto",
        },
      ],
      "spacing": "none",
      "type": "ColumnSet",
    },
    {
      "color": "\${if(toLower(Language) == 'critical', 'Warning', if(toLower(Language) == 'error', 'Attention', if(toLower(Language) == 'good', 'Good', if(int(Language) == 3, 'Good', if(int(Language) == 1, 'Attention', if(int(Language) == 2, 'Warning', 'Default'))))))}",
      "maxLines": 1,
      "size": "extraLarge",
      "spacing": "none",
      "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
      "type": "TextBlock",
      "weight": "default",
      "wrap": false,
    },
    {
      "items": [
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Amount",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Net Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${formatNumber(float(net_amount), 2, 'null')} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Gross Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${gross_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Tax Amount:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${tax_amount} \${currency_code}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
        {
          "items": [
            {
              "color": "Default",
              "maxLines": 2,
              "size": "small",
              "spacing": "medium",
              "text": "Additional Info",
              "type": "TextBlock",
              "weight": "bolder",
              "wrap": true,
            },
            {
              "items": [
                {
                  "columns": [
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Business Partner ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(bp_id)) == '', '&minus;', string(bp_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Created At:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(created_at && created_at != '', convertToUTC(created_at, 'UTC', 'ddd d MMM YYYY HH:mm'), '&minus;')}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                    {
                      "items": [
                        {
                          "color": "Default",
                          "isSubtle": true,
                          "maxLines": 1,
                          "size": "small",
                          "spacing": "default",
                          "text": "Sales Order ID:",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": false,
                        },
                        {
                          "color": "Default",
                          "maxLines": 2,
                          "size": "small",
                          "spacing": "none",
                          "text": "\${if(trim(string(so_id)) == '', '&minus;', string(so_id))}",
                          "type": "TextBlock",
                          "weight": "default",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "stretch",
                    },
                  ],
                  "type": "ColumnSet",
                },
              ],
              "spacing": "small",
              "type": "Container",
            },
          ],
          "spacing": "medium",
          "type": "Container",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
    {
      "actions": [
        {
          "$when": "\${salesorderID ? true : false}",
          "data": {
            "actionParams": {
              "keys": [
                "SalesPlanUUID",
                "IsActiveEntity",
              ],
            },
            "contextURL": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(id='12345')",
            "isConfirmationRequired": false,
          },
          "isEnabled": "\${salesorderID}",
          "style": "default",
          "title": "Release",
          "type": "Action.Execute",
          "verb": "C_SalesPlanTPRelease",
        },
      ],
      "type": "ActionSet",
    },
  ],
  "metadata": {
    "sap.cards.ap": {
      "cardType": "LEAN_DT",
      "parentAppId": "sales.order.wd20",
      "templateName": "ObjectPage",
      "versions": {
        "ui5": "1.125.1-SNAPSHOT-202406281543",
      },
    },
    "webUrl": "http://localhost:8080/sap/opu/odata/sap/salesorder/C_STTA_SalesOrder_WD_20(id='12345')?$select=bp_id,currency_code,overall_status,so_id,created_at,net_amount,gross_amount,tax_amount",
  },
  "msteams": {
    "width": "full",
  },
  "type": "AdaptiveCard",
  "version": "1.6",
}
`;

exports[`getObjectPageCardManifestForPreview - V4 returns integration card manifest 1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "id": "objectCard",
    "subTitle": "A Fiori application. | {overall_status}",
    "title": "Sales Order",
    "type": "card",
  },
  "sap.card": {
    "configuration": {
      "csrfTokens": {
        "token1": {
          "data": {
            "request": {
              "headers": {
                "X-CSRF-Token": "Fetch",
              },
              "method": "HEAD",
              "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder",
            },
          },
        },
      },
      "destinations": {
        "service": {
          "defaultUrl": "/",
          "name": "(default)",
        },
      },
      "parameters": {
        "BankCountry": {
          "type": "number",
          "value": "0000000006",
        },
        "IsActiveEntity": {
          "type": "boolean",
          "value": "true",
        },
        "_contentSelectQuery": {
          "value": "$select=so_id,bp_id,created_at,net_amount,gross_amount,tax_amount,currency_code,overall_status",
        },
        "_entitySet": {
          "type": "string",
          "value": "C_STTA_SalesOrder_WD_20",
        },
        "_headerSelectQuery": {
          "value": "$select=bp_id,currency_code,overall_status",
        },
        "contextParameters": {
          "type": "string",
          "value": "node_key='005056a7-004e-1ed8-b2e0-081387831f0d',IsActiveEntity=true,BankCountry=0000000006",
        },
        "node_key": {
          "type": "string",
          "value": "005056a7-004e-1ed8-b2e0-081387831f0d",
        },
      },
    },
    "content": {
      "data": {
        "path": "/content/d/",
      },
      "groups": [
        {
          "items": [
            {
              "label": "Net Amount",
              "name": "net_amount",
              "value": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
            },
            {
              "label": "Gross Amount",
              "name": "gross_amount",
              "value": "{gross_amount} {currency_code}",
            },
            {
              "label": "Tax Amount",
              "name": "tax_amount",
              "value": "{tax_amount} {currency_code}",
            },
          ],
          "title": "Amount",
        },
        {
          "items": [
            {
              "label": "Business Partner ID",
              "name": "bp_id",
              "value": "{bp_id}",
            },
            {
              "label": "Created At",
              "name": "created_at",
              "value": "{= format.dateTime(\${created_at}, {"relative":false,"UTC":true})}",
            },
            {
              "label": "Sales Order ID",
              "name": "so_id",
              "value": "{so_id}",
            },
          ],
          "title": "Additional Info",
        },
      ],
    },
    "data": {
      "request": {
        "batch": {
          "content": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})",
          },
          "header": {
            "headers": {
              "Accept": "application/json",
              "Accept-Language": "{{parameters.LOCALE}}",
            },
            "method": "GET",
            "retryAfter": 30,
            "url": "C_STTA_SalesOrder_WD_20({{parameters.contextParameters}})?{{parameters._headerSelectQuery}}",
          },
        },
        "headers": {
          "Accept-Language": "{{parameters.LOCALE}}",
          "X-CSRF-Token": "{{csrfTokens.token1}}",
        },
        "method": "POST",
        "url": "{{destinations.service}}/sap/opu/odata/sap/salesorder/$batch",
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "header": {
      "actions": [
        {
          "parameters": {
            "ibnParams": {
              "BankCountry": "0000000006",
              "IsActiveEntity": "true",
              "node_key": "'005056a7-004e-1ed8-b2e0-081387831f0d'",
              "sap-xapp-state-data": "{"selectionVariant":{"Parameters":[],"SelectOptions":[{"PropertyName":"node_key","Ranges":[{"Sign":"I","Option":"EQ","Low":"'005056a7-004e-1ed8-b2e0-081387831f0d'","High":null}]},{"PropertyName":"IsActiveEntity","Ranges":[{"Sign":"I","Option":"EQ","Low":"true","High":null}]},{"PropertyName":"BankCountry","Ranges":[{"Sign":"I","Option":"EQ","Low":"0000000006","High":null}]}]}}",
            },
            "ibnTarget": {
              "action": "intent",
              "semanticObject": "test",
            },
          },
          "type": "Navigation",
        },
      ],
      "data": {
        "path": "/header/d/",
      },
      "mainIndicator": {
        "number": "{= format.float(\${net_amount}, {"decimals":2,"style":"short"})} {currency_code}",
        "state": "{= extension.formatters.formatCriticality(\${Language}, 'color') }",
        "trend": "None",
        "unit": "",
      },
      "sideIndicators": [
        {
          "number": "",
          "title": "",
          "unit": "",
        },
        {
          "number": "",
          "title": "",
          "unit": "",
        },
      ],
      "subTitle": "A Fiori application.",
      "title": "Sales Order",
      "type": "Numeric",
      "unitOfMeasurement": "{overall_status}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "sales.order.wd20",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "1.125.1-SNAPSHOT-202406281543",
    },
  },
  "sap.ui": {
    "icons": {
      "icon": "sap-icon://switch-classes",
    },
    "technology": "UI5",
  },
}
`;
